--- a/1111/color_scroll/style.css
+++ b/1111/color_scroll/style.css
@@ -21,3 +21,10 @@ h1 {
   color: #fff;
   mix-blend-mode: difference;
 }
+
+.mocetotopo {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
